--- a/site/guide/model-workflows/_link-workflow-together.qmd
+++ b/site/guide/model-workflows/_link-workflow-together.qmd
@@ -44,7 +44,7 @@ To link subsequent steps together:
 
 ::::
 
-#### End the workflow
+#### End the workflow*
 
 When all your steps have been linked together, designate the end of your workflow by:
 
