--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -39,21 +39,20 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 {{< include _link-workflow-together.qmd >}}
 
 ##### Link approval steps*
+
 {{< fa users >}} Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} {{< fa cube >}} Model Stage Change step:[^3]
 
 1. First, configure an **{{< fa users >}} Approval** step.
 
 2. Then, drag two **{{< fa cube >}} Model Stage Change** steps onto the canvas:
 
-    - Assign a `Rejected` status to one in the **Set Document Status** field.
-    - Assign an `Approved` status to the other in the **Set Document Status** field.
+    - Assign a stage associated with rejection to one in the **[set model stage to]{.smallcaps}** field.
+    - Assign a stage associated with approval to the other in the **[set model stage to]{.smallcaps}** field.
 
-3. Connect the **{{< fa users >}} Approval** step to the [Rejected]{.bubble .red .red-bg} and [Approved]{.bubble .green .green-bg} **{{< fa cube >}} Model Stage Change** steps with the red and green **{{< fa circle >}}** respectively by dragging from the colored **{{< fa circle >}}** to the top **{{< fa circle >}}** of the subsequent step.
+3. Then, from the bottom of your **{{< fa users >}} Approval** step:
 
-<!-- ::: {.column-margin}
-![Linked REJECTED and APPROVED Status Change steps](approval-group-setup.png){fig-alt="A screenshot showing linked REJECTED and APPROVED Status Change steps" .screenshot}
-
-::: -->
+    a. Connect the left [**{{< fa circle >}}**]{.red} (red) to your rejection step.[^4]
+    b. Connect the right [**{{< fa circle >}}**]{.green} (green) to your approval step.[^5]
 
 ## Edit existing workflows
 
@@ -68,7 +67,7 @@ You can edit a workflow in two ways:
 2. Via a workflow applied to a model:
 
     a. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-    b. Select a model or find your model by applying a filter or searching for it.[^4]
+    b. Select a model or find your model by applying a filter or searching for it.[^6]
     c. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
     d. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
     e. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa pencil >}} Edit Workflow**.
@@ -107,17 +106,8 @@ You can edit a workflow in two ways:
 
 [^3]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types)
 
-[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^4]: When complete, the workflow arrow will display as [Rejected]{.bubble .red .red-bg}.
 
-<!-- [^3]: [Status Change](#status-change) steps
+[^5]: When complete, the workflow arrow will display as [Approved]{.bubble .green .green-bg}.
 
-[^4]: [User Action](#user-action) steps
-
-[^5]: [Condition Branch](#condition-branch) steps
-
-[^6]: 
-
-    - [Configure workflow steps](#configure-workflow-steps)
-    - [Approval](#approval) steps
-
-[^7]: [Status Change](#status-change) steps -->
+[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
