--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -91,7 +91,7 @@ Transitions the workflow into another workflow state.[^6]
 
 ::::
 
-#### {{< fa arrow-pointer >}} User Action v2*
+#### {{< fa arrow-pointer >}} User Action v2
 <span id="user-action"></span>
 
 Creates a button that performs an action on behalf of the user.
@@ -144,13 +144,13 @@ Example
 ::::
 ::: -->
 
-#### {{< fa users >}} Approval*
+#### {{< fa users >}} Approval
 <span id="approval"></span>
 
 When your workflow reaches the approval step, roles or users in the selected **[approval group]{.smallcaps}** will receive a preconfigured message.
 
 - Select from either **User Roles**,[^10] **Model Stakeholder Types**,[^11] or either **User Role** or **User Type** inventory field.[^12]
-- Must be connected to both an approval and rejection {{< fa cube >}} Model Stage Change step.[^13]
+- Must be connected to both a rejection and approval {{< fa cube >}} Model Stage Change step.[^13]
 
 ::: {.callout}
 Please note that roles, stakeholders, or users must be assigned to the indicated **[approval group]{.smallcaps}** before the workflow is transitioned into the **{{< fa users >}} Approval** step in order for the message to be displayed to users in those categories.
@@ -378,7 +378,14 @@ Deleting a workflow state may cause your existing workflows to malfunction.*CAN 
 
 [^12]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
 
-[^13]: [Workflow step types](#workflow-step-types)
+[^13]:
+
+    1. Configure two **{{< fa cube >}} Model Stage Change** steps for your associated rejection and approval stages.
+    2. Then, from the bottom of your **{{< fa users >}} Approval** step:
+        a. Connect the left [**{{< fa circle >}}**]{.red} (red) to your rejection step.
+        b. Connect the right [**{{< fa circle >}}**]{.green} (green) to your approval step.
+    <br><br>
+    [Configure custom workflows](configure-custom-workflows.qmd#link-workflow-together)
 
 [^14]: [Conditional requirements](#conditional-requirements)
 
