--- a/site/guide/model-workflows/_link-workflow-together.qmd
+++ b/site/guide/model-workflows/_link-workflow-together.qmd
@@ -1,5 +1,7 @@
 :::: {.content-visible unless-format="revealjs"}
-To initiate the beginning of your workflow:^[After you’ve [configured your workflow steps](#configure-workflow-steps), you can then link your workflow together.]
+#### Start the workflow
+
+To initiate the beginning of your workflow:^[After you’ve configured your workflow steps, you can then link your workflow together.]
 
 1. Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
 
@@ -19,11 +21,31 @@ To link subsequent steps together:
 
     You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.*
 
-1. When you are finished, click **Save Workflow** to apply your changes.
+1. When you are finished linking your configured steps together, designate an **{{< fa circle-stop >}} End** step.^[[End the workflow](#end-the-workflow)]
+
+1. When you are finished configuring your workflow, click **Save Workflow** to apply your changes.
+
+##### Link approval steps*
+
+{{< fa users >}} Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} {{< fa cube >}} Model Stage Change step:^[[Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types)]
+
+1. First, configure an **{{< fa users >}} Approval** step.
+
+1. Then, drag two **{{< fa cube >}} Model Stage Change** steps onto the canvas:
+
+    - Assign a stage associated with rejection to one in the **[set model stage to]{.smallcaps}** field.
+    - Assign a stage associated with approval to the other in the **[set model stage to]{.smallcaps}** field.
+
+1. Then, from the bottom of your **{{< fa users >}} Approval** step:
+
+    a. Connect the left [**{{< fa circle >}}**]{.red} (red) to your rejection step.^[When complete, the workflow arrow will display as [Rejected]{.bubble .red .red-bg}.]
+    b. Connect the right [**{{< fa circle >}}**]{.green} (green) to your approval step.^[When complete, the workflow arrow will display as [Approved]{.bubble .green .green-bg}.]
 
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
+#### Start the workflow
+
 To initiate the beginning of your workflow:
 
 1. Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
@@ -40,12 +62,17 @@ To link subsequent steps together:
 
     You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.
 
-1. When you are finished, click **Save Workflow** to apply your changes.
+1. When you are finished linking your configured steps together, designate an **{{< fa circle-stop >}} End**  step.
+
+1. When you are finished configuring your workflow, click **Save Workflow** to apply your changes.
 
 ::::
 
-#### End the workflow*
+#### End the workflow
 
-When all your steps have been linked together, designate the end of your workflow by:
+When all your workflow steps have been linked together:
 
-WIP
+1. Designate the end of your workflow by dragging an **{{< fa circle-stop >}} End** step onto the canvas.
+
+1. Link relevant previous steps to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of those steps, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
+
