--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -18,13 +18,15 @@ Configure workflows to match your organizational needs throughout your model lif
 
 :::
 
-## Create a custom workflow
+## Create custom workflows
 
 To set up a new custom workflow, you'll need to complete these three steps in sequence:
 
- 1. [Add a new workflow](#add-workflows)
- 2. [Configure the workflow steps](#configure-workflow-steps)
- 3. [Link the workflow together](#link-workflow-together)
+ 1. Add a new workflow
+ 2. Configure the workflow steps
+ 3. Link the workflow together
+
+::: {.panel-tabset}
 
 ### Add new workflows
 
@@ -36,23 +38,28 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 
 ### Link workflow together
 
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-40-ns .pr3}
+[Start the workflow](#start-the-workflow){.button .button-fill}
+
+:::
+
+::: {.w-30-ns .pr3}
+[Link steps together](#link-steps-together){.button .button-fill}
+
+:::
+
+::: {.w-30-ns .pr3}
+[End the workflow](#end-the-workflow){.button .button-fill}
+
+:::
+
+::::
+
 {{< include _link-workflow-together.qmd >}}
 
-##### Link approval steps*
-
-{{< fa users >}} Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} {{< fa cube >}} Model Stage Change step:[^3]
-
-1. First, configure an **{{< fa users >}} Approval** step.
-
-2. Then, drag two **{{< fa cube >}} Model Stage Change** steps onto the canvas:
-
-    - Assign a stage associated with rejection to one in the **[set model stage to]{.smallcaps}** field.
-    - Assign a stage associated with approval to the other in the **[set model stage to]{.smallcaps}** field.
-
-3. Then, from the bottom of your **{{< fa users >}} Approval** step:
-
-    a. Connect the left [**{{< fa circle >}}**]{.red} (red) to your rejection step.[^4]
-    b. Connect the right [**{{< fa circle >}}**]{.green} (green) to your approval step.[^5]
+:::
 
 ## Edit existing workflows
 
@@ -67,12 +74,14 @@ You can edit a workflow in two ways:
 2. Via a workflow applied to a model:
 
     a. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-    b. Select a model or find your model by applying a filter or searching for it.[^6]
+    b. Select a model or find your model by applying a filter or searching for it.[^3]
     c. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
     d. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
     e. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa pencil >}} Edit Workflow**.
 
-### Delete workflow steps
+::: {.panel-tabset}
+
+#### Delete workflow steps
 
 1. Hover over the step until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
 
@@ -82,7 +91,7 @@ You can edit a workflow in two ways:
 
 3. When you are finished, click **Save Workflow** to apply your changes.
 
-### Remove links between steps
+#### Remove links between steps
 
 1. Hover over a connection until the **{{< fa trash-can >}}** appears.
 
@@ -91,6 +100,8 @@ You can edit a workflow in two ways:
     On the confirmation dialogue that appears, select **OK** to confirm deletion.
 
 3. When you are finished, click **Save Workflow** to apply your changes.
+
+:::
 
 ## What's next
 
@@ -104,10 +115,4 @@ You can edit a workflow in two ways:
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^3]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types)
-
-[^4]: When complete, the workflow arrow will display as [Rejected]{.bubble .red .red-bg}.
-
-[^5]: When complete, the workflow arrow will display as [Approved]{.bubble .green .green-bg}.
-
-[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
