--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -79,6 +79,8 @@ You can edit a workflow in two ways:
     d. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
     e. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa pencil >}} Edit Workflow**.
 
+Make your desired changes to step configuration and step relationships. When you are finished, click **Save Workflow** to apply your changes.
+
 ::: {.panel-tabset}
 
 #### Delete workflow steps
