--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -45,7 +45,7 @@ A workflow is comprised of an interplay of these elements:
 
 :::
 
-::: {.w-50-ns .pr3}
+::: {.w-50-ns .pr5}
 [{{< fa wifi >}} &hairsp; Workflow State Change](#state-change){.button .button-fill}
 
 :::
@@ -84,7 +84,7 @@ Transitions the workflow into another workflow state.[^6]
 
 :::
 
-::: {.w-50-ns .pr3}
+::: {.w-50-ns .pr5}
 [{{< fa users >}} &hairsp; Approval](#approval){.button .button-fill}
 
 :::
@@ -132,14 +132,14 @@ Please note that roles, stakeholders, or users must be assigned to the indicated
 
 :::
 
-::: {.w-50-ns .pr3}
+::: {.w-50-ns .pr5}
 [{{< fa clock >}} &hairsp; Wait](#wait){.button .button-fill}
 
 :::
 
 ::::
 
-#### {{< fa maximize >}} Condition Branch*
+#### {{< fa maximize >}} Condition Branch
 <span id="condition-branch"></span>
 
 - Allows diverging paths based on conditional requirements.
@@ -152,34 +152,35 @@ Workflows cannot be saved until condition branches are connected to other steps.
 To configure a condition branch:
 
 1. On the Configure Condition Branch modal, click **{{< fa plus >}} Add Branch**.
-2. Enter in the **[path name]{.smallcaps}** and designate the **[conditions]{.smallcaps}**[^12] that apply to this path.
+2. Enter in the **[path name]{.smallcaps}** and designate the **[conditions]{.smallcaps}**[^16] that apply to this path.
 3. Continue with steps 1 and 2 until your conditional branch logic is complete.
 
     To remove a path, click **{{< fa ellipsis-vertical >}}** and select **{{< fa trash-can >}} Remove Path**.
 4. When you are finished setting up all your branch paths, click **Update Step** to save your step.
 
-    Proceed with linking the Condition Branch with your subsequent steps.[^13]
+    Proceed with linking the Condition Branch with your subsequent steps.[^17]
 
-#### {{< fa clock >}} Wait*
+#### {{< fa clock >}} Wait
 <span id="wait"></span>
 
 - Creates a time condition for displaying next available action.
-- Used to enforce a time delay or a calendar date milestone. 
+- Used to enforce a time delay or a calendar date milestone.
 
 ::: {.callout title="Time stamp configuration is in the current user's timezone."}
-Other users viewing those fields or the workflow will see the value automatically in their timezone. 
+Other users viewing those fields or the workflow will see the value automatically in their timezone.
+
 :::
 
-To configure a wait step, select when you would like to [resume workflow]{.smallcaps}: 
+To configure a wait step, select when you would like to [resume workflow:]{.smallcaps}
 
-| Option | Required field | Description | 
+| Option | Required field | Description |
 |---:|---|---|
 | After Time Interval  | [wait duration]{.smallcaps} | Wait for a set amount of time in minutes, hours, or days. Applies to all models under the workflow. |
 | At Specified Date | [wait until]{.smallcaps} | Wait until a specific timestamp. Applies to all models under the workflow. If the milestone date inputted is in the past, the next workflow step will display immediately. |
-| At Specified Date on Model Field | [model field]{.smallcaps}[^15] | Wait until a specific timestamp as defined by a valid `Date` or `Date Time` type model inventory field on a per model basis. If the selected field is empty[^16] or the milestone date inputted is in the past, the next workflow step will display immediately. |
-: **Wait** step configuration {.hover tbl-colwidths="[30,15,45]"}
+| At Specified Date on Model Field | [model field]{.smallcaps}[^18] | Wait until a specific timestamp as defined by a valid `Date` or `Date Time` type model inventory field on a per model basis. If the selected field is empty[^19] or the milestone date inputted is in the past, the next workflow step will display immediately. |
+: **{{< fa clock >}} Wait** step configuration {.hover tbl-colwidths="[30,15,45]"}
 
-### Start / Stop
+### Workflow Logic
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -188,22 +189,23 @@ To configure a wait step, select when you would like to [resume workflow]{.small
 
 :::
 
-::: {.w-50-ns .pr3}
+::: {.w-50-ns .pr5}
 [{{< fa circle-stop >}} &hairsp; End](#end){.button .button-fill}
 
 :::
 
 ::::
 
-#### {{< fa arrow-right-arrow-left >}} Run Workflow*
+#### {{< fa arrow-right-arrow-left >}} Run Workflow
 <span id="run-workflow"></span>
 
-WIP
+Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**, allowing you to chain workflows.
 
-#### {{< fa circle-stop >}} End*
+#### {{< fa circle-stop >}} End
 <span id="end"></span>
 
-WIP
+- Designates the end of your workflow.
+- Use this step when all of your other steps have been configured and linked together.*
 
 :::
 
@@ -229,15 +231,56 @@ For Status Change, User Action, and Condition Branch conditions, you're able to 
 
 #### {{< fa arrow-pointer >}} User Action v2
 
+| Step type | Conditional options |
+|---:|---|
+| Status Change | Under **[when these conditions are met]{.smallcaps}**, you are able to set both `AND` and `OR` conditions. |
+| User Action | Under **[display action button when]{.smallcaps}**, you are able to set both `AND` and `OR` conditions.  |
+| Approval | Under **[threshold]{.smallcaps}**, you are able to set the minimum percentage of approvers required for the resource to be approved. |
+| Condition Branch | Under each branch's **[conditions]{.smallcaps}**, you're able to designate the `AND` and `OR` conditions that apply to that path. |
+: Step type conditional options {.hover tbl-colwidths="[20,80]"}
+
+For Status Change, User Action, and Condition Branch conditions, you're able to add a single independent **Rule** or a linked condition **Group**. These rules and groups can be nested if desired:
+
+- Click **{{< fa plus >}} Rule** to add an independent rule.
+- Click **{{< fa plus >}} Group** to add a linked group of rules that all must be true to qualify.
+
 #### {{< fa users >}} Approval
+
+| Step type | Conditional options |
+|---:|---|
+| Status Change | Under **[when these conditions are met]{.smallcaps}**, you are able to set both `AND` and `OR` conditions. |
+| User Action | Under **[display action button when]{.smallcaps}**, you are able to set both `AND` and `OR` conditions.  |
+| Approval | Under **[threshold]{.smallcaps}**, you are able to set the minimum percentage of approvers required for the resource to be approved. |
+| Condition Branch | Under each branch's **[conditions]{.smallcaps}**, you're able to designate the `AND` and `OR` conditions that apply to that path. |
+: Step type conditional options {.hover tbl-colwidths="[20,80]"}
+
+For Status Change, User Action, and Condition Branch conditions, you're able to add a single independent **Rule** or a linked condition **Group**. These rules and groups can be nested if desired:
+
+- Click **{{< fa plus >}} Rule** to add an independent rule.
+- Click **{{< fa plus >}} Group** to add a linked group of rules that all must be true to qualify.
 
 #### {{< fa maximize >}} Condition Branch
 
+| Step type | Conditional options |
+|---:|---|
+| Status Change | Under **[when these conditions are met]{.smallcaps}**, you are able to set both `AND` and `OR` conditions. |
+| User Action | Under **[display action button when]{.smallcaps}**, you are able to set both `AND` and `OR` conditions.  |
+| Approval | Under **[threshold]{.smallcaps}**, you are able to set the minimum percentage of approvers required for the resource to be approved. |
+| Condition Branch | Under each branch's **[conditions]{.smallcaps}**, you're able to designate the `AND` and `OR` conditions that apply to that path. |
+: Step type conditional options {.hover tbl-colwidths="[20,80]"}
+
+For Status Change, User Action, and Condition Branch conditions, you're able to add a single independent **Rule** or a linked condition **Group**. These rules and groups can be nested if desired:
+
+- Click **{{< fa plus >}} Rule** to add an independent rule.
+- Click **{{< fa plus >}} Group** to add a linked group of rules that all must be true to qualify.
+
 :::
 
-### Workflow states*
+### Workflow states
 
 Workflow states are statuses unique to a specific workflow, discrete from model stages.**
+
+::: {.panel-tabset}
 
 #### Add workflow states
 
@@ -250,7 +293,7 @@ Add workflow states by either while configuring a **{{< fa wifi >}} Workflow Sta
 5. Enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}**, then select a **[color]{.smallcaps}** for your workflow state.
 6. Click **Save** to create the workflow state.
 
-#### Delete workflow states
+#### Delete workflow states*
 
 ::: {.callout-important title="Workflow state deletion is permanent."}
 Deleting a workflow state may cause your existing workflows to malfunction.*CAN YOU EVEN DELETE A STATE THAT IS IN USE? Check
@@ -262,9 +305,12 @@ Deleting a workflow state may cause your existing workflows to malfunction.*CAN 
 4. Hover over the workflow state until the **{{< fa trash-can >}}** appears, then click on it.
 5. After you confirm, the workflow state will be removed.
 
+:::
+
 ## What's next
 
 - [Working with model workflows](working-with-model-workflows.qmd)
+
 
 <!-- FOOTNOTES -->
 
@@ -308,30 +354,10 @@ Deleting a workflow state may cause your existing workflows to malfunction.*CAN 
 
     Enter in a **[title]{.smallcaps}** and a **[message]{.smallcaps}** to display.
 
-<!-- 
+[^16]: [Conditional requirements](#conditional-requirements)
 
-[^4]: [Add conditional requirements](configure-custom-workflows.qmd#add-conditional-requirements)
+[^17]: [Configure custom workflows](configure-custom-workflows.qmd#create-custom-workflows)
 
-[^5]: [Manage model stages](manage-model-stages.qmd)
+[^18]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
 
-[^6]: [Add conditional requirements](configure-custom-workflows.qmd#add-conditional-requirements)
-
-[^7]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
-
-[^8]: [Manage roles](/guide/configuration/manage-roles.qmd)
-
-[^9]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
-
-[^10]: [Status Change](#status-change) steps
-
-[^11]: [Add conditional requirements](configure-custom-workflows.qmd#add-conditional-requirements)
-
-[^12]: [Add conditional requirements](configure-custom-workflows.qmd#add-conditional-requirements)
-
-[^13]: [Link steps together](configure-custom-workflows.qmd#link-steps-together) 
-
-[^14]: [Approval](#approval) steps
-
-[^15]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
-
-[^16]: Make model inventory fields **[required on registration]{.smallcaps}** to ensure necessary fields have valid values. -->
+[^19]: Make model inventory fields **[required on registration]{.smallcaps}** to ensure necessary fields have valid values.
