--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -22,11 +22,9 @@ Configure workflows to match your organizational needs throughout your model lif
 
 To set up a new custom workflow, you'll need to complete these three steps in sequence:
 
- 1. Add a new workflow
- 2. Configure the workflow steps
- 3. Link the workflow together
-
-::: {.panel-tabset}
+ 1. [Add a new workflow](#add-new-workflows)
+ 2. [Configure the workflow steps](#configure-workflow-steps)
+ 3. [Link the workflow together](#link-workflow-together)
 
 ### Add new workflows
 
@@ -38,52 +36,35 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 
 ### Link workflow together
 
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-30-ns .pr3}
-[Start the workflow](#start-the-workflow){.button .button-fill}
-
-:::
-
-::: {.w-30-ns .pr3}
-[Link steps together](#link-steps-together){.button .button-fill}
-
-:::
-
-::: {.w-30-ns .pr3}
-[End the workflow](#end-the-workflow){.button .button-fill}
-
-:::
-
-::::
-
 {{< include _link-workflow-together.qmd >}}
-
-:::
 
 ## Edit existing workflows
 
 You can edit a workflow in two ways:
 
-1. Via the **{{< fa gear >}} Settings** page:
-
-    a. In the left sidebar, click **{{< fa gear >}} Settings**.
-    b. Under Workspace, select **Workflows**.
-    c. Click on the workflow you'd like to modify to edit the configuration for that workflow.
-
-2. Via a workflow applied to a model:
-
-    a. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-    b. Select a model or find your model by applying a filter or searching for it.[^3]
-    c. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
-    d. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
-    e. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa pencil >}} Edit Workflow**.
-
-Make your desired changes to step configuration and step relationships. When you are finished, click **Save Workflow** to apply your changes.
-
 ::: {.panel-tabset}
 
-#### Delete workflow steps
+#### Via the **{{< fa gear >}} Settings** page
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+2. Under Workspace, select **Workflows**.
+3. Click on the workflow you'd like to modify to edit the configuration for that workflow.
+
+#### Via a workflow applied to a model
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+2. Select a model or find your model by applying a filter or searching for it.[^3]
+3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
+4. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
+5. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa pencil >}} Edit Workflow**.
+
+:::
+
+a. Make your desired changes to step configuration[^4] and step relationships[^5] on your workflow.
+
+b. When you are finished, click **Save Workflow** to apply your changes.
+
+### Delete workflow steps
 
 1. Hover over the step until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
 
@@ -93,7 +74,7 @@ Make your desired changes to step configuration and step relationships. When you
 
 3. When you are finished, click **Save Workflow** to apply your changes.
 
-#### Remove links between steps
+### Remove links between steps
 
 1. Hover over a connection until the **{{< fa trash-can >}}** appears.
 
@@ -102,8 +83,6 @@ Make your desired changes to step configuration and step relationships. When you
     On the confirmation dialogue that appears, select **OK** to confirm deletion.
 
 3. When you are finished, click **Save Workflow** to apply your changes.
-
-:::
 
 ## What's next
 
@@ -118,3 +97,7 @@ Make your desired changes to step configuration and step relationships. When you
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^4]: [Configure workflow steps](#configure-custom-workflows)
+
+[^5]: [Link workflow together](#link-workflow-together)
