--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -209,40 +209,26 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 
 :::
 
-### Conditional requirements*
+### Conditional requirements
 
 Conditional requirements can be configured for the following step types:**
 
 ::: {.panel-tabset}
 #### {{< fa cube >}} Model Stage Change
 
-| Step type | Conditional options |
-|---:|---|
-| Status Change | Under **[when these conditions are met]{.smallcaps}**, you are able to set both `AND` and `OR` conditions. |
-| User Action | Under **[display action button when]{.smallcaps}**, you are able to set both `AND` and `OR` conditions.  |
-| Approval | Under **[threshold]{.smallcaps}**, you are able to set the minimum percentage of approvers required for the resource to be approved. |
-| Condition Branch | Under each branch's **[conditions]{.smallcaps}**, you're able to designate the `AND` and `OR` conditions that apply to that path. |
-: Step type conditional options {.hover tbl-colwidths="[20,80]"}
+1. Under **[when these conditions are met]{.smallcaps}**, set your `AND` and `OR` conditions.
+2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
 
-For Status Change, User Action, and Condition Branch conditions, you're able to add a single independent **Rule** or a linked condition **Group**. These rules and groups can be nested if desired:
-
-- Click **{{< fa plus >}} Rule** to add an independent rule.
-- Click **{{< fa plus >}} Group** to add a linked group of rules that all must be true to qualify.
+    - Click **{{< fa plus >}} Add rule** to add an independent rule.
+    - Click **{{< fa plus-minus >}} Add group** to add a linked group of rules that all must be true to qualify.
 
 #### {{< fa arrow-pointer >}} User Action v2
 
-| Step type | Conditional options |
-|---:|---|
-| Status Change | Under **[when these conditions are met]{.smallcaps}**, you are able to set both `AND` and `OR` conditions. |
-| User Action | Under **[display action button when]{.smallcaps}**, you are able to set both `AND` and `OR` conditions.  |
-| Approval | Under **[threshold]{.smallcaps}**, you are able to set the minimum percentage of approvers required for the resource to be approved. |
-| Condition Branch | Under each branch's **[conditions]{.smallcaps}**, you're able to designate the `AND` and `OR` conditions that apply to that path. |
-: Step type conditional options {.hover tbl-colwidths="[20,80]"}
+1. Under **[display action button when]{.smallcaps}**, set your `AND` and `OR` conditions.
+2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
 
-For Status Change, User Action, and Condition Branch conditions, you're able to add a single independent **Rule** or a linked condition **Group**. These rules and groups can be nested if desired:
-
-- Click **{{< fa plus >}} Rule** to add an independent rule.
-- Click **{{< fa plus >}} Group** to add a linked group of rules that all must be true to qualify.
+    - Click **{{< fa plus >}} Add rule** to add an independent rule.
+    - Click **{{< fa plus-minus >}} Add group** to add a linked group of rules that all must be true to qualify.
 
 #### {{< fa users >}} Approval
 
@@ -261,18 +247,11 @@ For Status Change, User Action, and Condition Branch conditions, you're able to 
 
 #### {{< fa maximize >}} Condition Branch
 
-| Step type | Conditional options |
-|---:|---|
-| Status Change | Under **[when these conditions are met]{.smallcaps}**, you are able to set both `AND` and `OR` conditions. |
-| User Action | Under **[display action button when]{.smallcaps}**, you are able to set both `AND` and `OR` conditions.  |
-| Approval | Under **[threshold]{.smallcaps}**, you are able to set the minimum percentage of approvers required for the resource to be approved. |
-| Condition Branch | Under each branch's **[conditions]{.smallcaps}**, you're able to designate the `AND` and `OR` conditions that apply to that path. |
-: Step type conditional options {.hover tbl-colwidths="[20,80]"}
+1. Under each branch's **[conditions]{.smallcaps}**, set your `AND` and `OR` conditions.
+2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
 
-For Status Change, User Action, and Condition Branch conditions, you're able to add a single independent **Rule** or a linked condition **Group**. These rules and groups can be nested if desired:
-
-- Click **{{< fa plus >}} Rule** to add an independent rule.
-- Click **{{< fa plus >}} Group** to add a linked group of rules that all must be true to qualify.
+    - Click **{{< fa plus >}} Add rule** to add an independent rule.
+    - Click **{{< fa plus-minus >}} Add group** to add a linked group of rules that all must be true to qualify.
 
 :::
 
