--- a/site/guide/model-workflows/_configure-workflow-steps.qmd
+++ b/site/guide/model-workflows/_configure-workflow-steps.qmd
@@ -12,7 +12,7 @@ To add or edit workflow steps:
 
 1. After you're finished with step configuration, click **Update Step** to apply your changes.
 
-1. After you've configured a step,^[To delete a step, refer to: [Edit existing workflows](/guide/model-workflows/configure-custom-workflows.qmd#edit-existing-workflows)] you can then link your workflow together.
+1. After you've configured a step,^[To delete a step, refer to: [Delete workflow steps](/guide/model-workflows/configure-custom-workflows.qmd#delete-workflow-steps)] you can then [link your workflow together](/guide/model-workflows/configure-custom-workflows.qmd#link-workflow-together).
 
 ::: {.callout}
 Refer to [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-elements) for information on available step types and details on how to set up conditional requirements.
