--- a/site/guide/model-workflows/_link-workflow-together.qmd
+++ b/site/guide/model-workflows/_link-workflow-together.qmd
@@ -1,13 +1,16 @@
 :::: {.content-visible unless-format="revealjs"}
+
+::: {.panel-tabset}
+
 #### Start the workflow
 
-To initiate the beginning of your workflow:^[After you’ve configured your workflow steps, you can then link your workflow together.]
+To initiate the beginning of your workflow:^[After you’ve [configured your workflow steps](/guide/model-workflows/configure-custom-workflows#configure-workflow-steps), you can then link your workflow together.]
 
 1. Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
 
 1. Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the any **{{< fa circle >}}** on the first step of your workflow.
 
-1. Continue with [linking your steps together](#link-steps-together).
+1. Continue with linking the rest your steps together.
 
 #### Link steps together
 
@@ -21,7 +24,7 @@ To link subsequent steps together:
 
     You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.*
 
-1. When you are finished linking your configured steps together, designate an **{{< fa circle-stop >}} End** step.^[[End the workflow](#end-the-workflow)]
+1. When you are finished linking your configured steps together, designate an **{{< fa circle-stop >}} End** step.
 
 
 ##### Link approval steps*
@@ -40,6 +43,19 @@ To link subsequent steps together:
     a. Connect the left [**{{< fa circle >}}**]{.red} (red) to your rejection step.^[When complete, the workflow arrow will display as [Rejected]{.bubble .red .red-bg}.]
     b. Connect the right [**{{< fa circle >}}**]{.green} (green) to your approval step.^[When complete, the workflow arrow will display as [Approved]{.bubble .green .green-bg}.]
 
+#### End the workflow
+
+When all your workflow steps have been linked together:
+
+1. Designate the end of your workflow by dragging an **{{< fa circle-stop >}} End** step onto the canvas.
+
+1. Link relevant previous steps to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of those steps, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
+
+1. When you are finished configuring your workflow, click **Save Workflow** to apply your changes.
+
+:::
+
+
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
@@ -51,7 +67,7 @@ To initiate the beginning of your workflow:
 
 1. Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the any **{{< fa circle >}}** on the first step of your workflow.
 
-1. Continue with linking your steps together.
+1. Continue with linking the rest your steps together.
 
 #### Link steps together
 
@@ -65,8 +81,6 @@ To link subsequent steps together:
 
 1. When you are finished configuring your workflow, click **Save Workflow** to apply your changes.
 
-::::
-
 #### End the workflow
 
 When all your workflow steps have been linked together:
@@ -76,3 +90,5 @@ When all your workflow steps have been linked together:
 1. Link relevant previous steps to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of those steps, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
 
 1. When you are finished configuring your workflow, click **Save Workflow** to apply your changes.
+
+::::
