--- a/site/get-started/common-steps/_download-code-samples.qmd
+++ b/site/get-started/common-steps/_download-code-samples.qmd
@@ -1,4 +1,4 @@
-**Option 2: Download the code samples**
+##### Option 2: Download the code samples
 
 1. Download our selection of code samples: [`notebooks.zip`](/notebooks.zip)
 
