--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -52,6 +52,10 @@ Our companion notebook, **Quickstart for model documentation,**[^1] walks you th
 <!-- NOT LIVE ON JUPYTERHUB YET, HASN'T BEEN UPDATED -->
 1. Open [Quickstart for model documentation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb) and [run the quickstart notebook](#run-the-quickstart-notebook).
 
+#### Download the notebooks
+
+::: {.panel-tabset}
+
 {{< include /get-started/common-steps/_download-notebooks.qmd >}}
 
 1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your development environment and [run the quickstart notebook](#run-the-quickstart-notebook).
@@ -59,6 +63,8 @@ Our companion notebook, **Quickstart for model documentation,**[^1] walks you th
 {{< include /get-started/common-steps/_download-code-samples.qmd >}}
 
 1. Open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your development environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+
+:::
 
 {{< include /get-started/common-steps/_run-quickstart-notebook.qmd >}}
 
