--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -36,20 +36,24 @@ In order to log tests as a validator instead of as a developer, we'll need to ad
 
 On the model details page after you've registered your model:
 
-1. Remove yourself as a model owner —
+::: {.panel-tabset}
 
-    a. Click on the **[owners]{.smallcaps}** tile, then click on the **x** next to your name.
-    b. Click **Save** to apply your changes to that role.
+#### Remove yourself as model owner
 
-2. Remove yourself as a developer —
+1. Click on the **[owners]{.smallcaps}** tile, then click on the **x** next to your name.
+2. Click **Save** to apply your changes to that role.
 
-    a. Click on the **[developers]{.smallcaps}** tile, then click on the **x** next to your name.
-    b. Click **Save** to apply your changes to that role.
+#### Remove yourself as developer
 
-3. Add yourself as a validator —
+1. Click on the **[developers]{.smallcaps}** tile, then click on the **x** next to your name.
+2. Click **Save** to apply your changes to that role.
 
-    a. Click on the **[validators]{.smallcaps}** tile, and select your name from the drop-down menu.
-    b. Click **Save** to apply your changes to that role.
+#### Add yourself as validator
+
+1. Click on the **[validators]{.smallcaps}** tile, and select your name from the drop-down menu.
+2. Click **Save** to apply your changes to that role.
+
+:::
 
 ::: {.column-margin}
 ![Model stakeholders with only the [validators]{.smallcaps} assigned](model-stakeholders.png){width=90% fig-alt="A screenshot showing the model stakeholders with only validators assigned" .screenshot}
@@ -72,13 +76,19 @@ Our companion notebook, **Quickstart for model validation,**[^1] walks you throu
 <!-- NOT LIVE ON JUPYTERHUB YET, HASN'T BEEN UPDATED -->
 1. Open [Quickstart for model validation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_validation.ipynb) and [run the quickstart notebook](#run-the-quickstart-notebook).
 
+#### Download the notebooks
+
+::: {.panel-tabset}
+
 {{< include /get-started/common-steps/_download-notebooks.qmd >}}
 
-1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_validation.ipynb` in your validation environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_validation.ipynb` in your validation environment and [run the quickstart notebook](#run-the-quickstart-notebook)..
 
 {{< include /get-started/common-steps/_download-code-samples.qmd >}}
 
 1. Open `notebooks/quickstart/quickstart_model_validation.ipynb` in your validation environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+
+:::
 
 {{< include /get-started/common-steps/_run-quickstart-notebook.qmd >}}
 
