--- a/site/get-started/common-steps/_download-notebooks.qmd
+++ b/site/get-started/common-steps/_download-notebooks.qmd
@@ -1,6 +1,4 @@
-#### Download the notebooks
-
-**Option 1: Clone the GitHub repository**
+##### Option 1: Clone the GitHub repository
 
 1. Open a terminal or command prompt.
 
